# 2.5-Dimensional-Engine

./: CMakeLists.txt  README.md  run.sh
src/: main.cpp
src/core/: Engine.cpp  Engine.h  Input.cpp  Input.h  Time.cpp  Time.h
src/ecs/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/graphics/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h
src/world/: Tile.h  Tilemap.cpp  Tilemap.h
